# packet

./: .gitattributes  .gitignore  .gitlab-ci.yml  .justfile  Cargo.toml  Packet.doap  README.md  cargo-frozen.patch  meson.build  meson_options.txt  packet.doap  quickshare-gtk.doap
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: ci.yml  vendor.yml
build-aux/: io.github.nozwock.Packet.Devel.json  io.github.nozwock.QuickShare.Devel.json
data/: io.github.nozwock.Packet.desktop.in.in  io.github.nozwock.Packet.gschema.xml.in  io.github.nozwock.Packet.metainfo.xml.in.in  io.github.nozwock.Packet.releases.xml.in  io.github.nozwock.Packet.releases.xml.in.in  io.github.nozwock.Packet.service.in  io.github.nozwock.QuickShare.desktop.in.in  io.github.nozwock.QuickShare.gschema.xml.in  io.github.nozwock.QuickShare.metainfo.xml.in.in  io.github.nozwock.QuickShare.service.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/plugins/: meson.build  packet_nautilus.py.in
data/resources/ui/: share-request-dialog.blp  shortcuts.blp  window.blp  window.ui
docs/: quickshare-gtk-mockup.excalidraw
docs/dominik-redesign/Drop/: icons.gresource  icons.gresource.xml  main.blp  main.py  settings
po/: LINGUAS  POTFILES.in  ar.po  az.po  bn.po  ca.po  cs.po  da.po  de.po  es_ES.po  et.po  fa_IR.po  fr.po  he.po  it.po  ko.po  nl.po  oc.po  packet.pot  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  tr.po
src/: application.rs  constants.rs  main.rs  meson.build  monitors.rs  plugins.rs  utils.rs  window.rs
src/objects/: data_transfer.rs  file_transfer.rs  mod.rs  receive_transfer.rs  send_transfer.rs
src/widgets/: file_card.rs  mod.rs  receive_transfer.rs  recipient_card.rs  request_dialog.rs  share_request.rs  share_request_dialog.rs  transfer_card.rs
