[package]
name = "packet"
authors = ["nozwock"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rqs_lib = { git = "https://github.com/nozwock/rquickshare.git", rev = "f835dea27643ee9a15d0022840715aaaf1eb3443", default-features = false, features = [
    "experimental",
] }
better_default = "1.0.5"
fs-err = "3.1"
anyhow = { version = "1.0" }
tokio = { version = "1.45.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "signal",
] }
whoami = "1.6.0"
async-channel = "2.3.1"
dirs = "6.0.0"
formatx = "0.2.4"
human_bytes = { version = "0.4.3", default-features = false }
port_scanner = "0.1.5"
zbus = "5.7.1"
futures-lite = "2.6.0"
